@@ -1,0 +1,2 @@
+scsh: Olin Shivers and Brian D. Carlstrom
+guile-scsh: Gary Houston
